Update some responses status code
